{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 1380,
  "lineage": "2c6664f4-0422-1f2a-7efa-4b33845ec25d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mayur_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:034138043057:loadbalancer/app/mayur-lb-mayur-recipe-fin/a442eec950b8cfc2",
            "arn_suffix": "app/mayur-lb-mayur-recipe-fin/a442eec950b8cfc2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mayur-lb-mayur-recipe-fin-31786806.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:034138043057:loadbalancer/app/mayur-lb-mayur-recipe-fin/a442eec950b8cfc2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mayur-lb-mayur-recipe-fin",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-05f1858aef4c5c814"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02817f1027a720691"
              },
              {
                "subnet_id": "subnet-0f2e70d47806adfac"
              }
            ],
            "subnets": [
              "subnet-02817f1027a720691",
              "subnet-0f2e70d47806adfac"
            ],
            "vpc_id": "vpc-042473058230720e2",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:034138043057:loadbalancer/app/mayur-lb-mayur-recipe-fin/a442eec950b8cfc2"
          },
          "dependencies": [
            "aws_security_group.mayur_sg",
            "module.mayur_vpc.aws_subnet.public",
            "module.mayur_vpc.aws_vpc.this",
            "module.mayur_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mayur_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:034138043057:listener/app/mayur-lb-mayur-recipe-fin/a442eec950b8cfc2/5c366c76daa2b9fe",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:034138043057:targetgroup/mayur-tg-mayur-recipe-fin/1fd9a72faaf5a51e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:034138043057:listener/app/mayur-lb-mayur-recipe-fin/a442eec950b8cfc2/5c366c76daa2b9fe",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:034138043057:loadbalancer/app/mayur-lb-mayur-recipe-fin/a442eec950b8cfc2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.mayur_lb",
            "aws_lb_target_group.mayur_tg",
            "aws_security_group.mayur_sg",
            "module.mayur_vpc.aws_subnet.public",
            "module.mayur_vpc.aws_vpc.this",
            "module.mayur_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mayur_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:034138043057:targetgroup/mayur-tg-mayur-recipe-fin/1fd9a72faaf5a51e",
            "arn_suffix": "targetgroup/mayur-tg-mayur-recipe-fin/1fd9a72faaf5a51e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:034138043057:targetgroup/mayur-tg-mayur-recipe-fin/1fd9a72faaf5a51e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mayur-tg-mayur-recipe-fin",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-042473058230720e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mayur_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034138043057:security-group/sg-08fafa4102d0e8dd7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fafa4102d0e8dd7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "mayur-recipe-finder-react-mayur-sg",
            "name_prefix": "",
            "owner_id": "034138043057",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mayur-recipe-finder-react-mayur-sg"
            },
            "tags_all": {
              "Name": "mayur-recipe-finder-react-mayur-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4ed27aceb3fa478"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mayur_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034138043057:security-group/sg-05f1858aef4c5c814",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f1858aef4c5c814",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mayur-sg-mayur-recipe-finder-react",
            "name_prefix": "",
            "owner_id": "034138043057",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-042473058230720e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.mayur_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034138043057:subnet/subnet-0f17c67e1d987f7e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f17c67e1d987f7e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "034138043057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "mayur-recipe-finder-react-mayur-subnet-a"
            },
            "tags_all": {
              "Name": "mayur-recipe-finder-react-mayur-subnet-a"
            },
            "vpc_id": "vpc-0a4ed27aceb3fa478"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034138043057:subnet/subnet-01c87826a889113d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c87826a889113d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "034138043057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "mayur-recipe-finder-react-mayur-subnet-b"
            },
            "tags_all": {
              "Name": "mayur-recipe-finder-react-mayur-subnet-b"
            },
            "vpc_id": "vpc-0a4ed27aceb3fa478"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034138043057:vpc/vpc-0a4ed27aceb3fa478",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e1289e1faab055be",
            "default_route_table_id": "rtb-011677c19184eaf95",
            "default_security_group_id": "sg-084ab30d1ae6eeccf",
            "dhcp_options_id": "dopt-0135606e418c48cf5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a4ed27aceb3fa478",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011677c19184eaf95",
            "owner_id": "034138043057",
            "region": "ap-south-1",
            "tags": {
              "Name": "mayur-recipe-finder-react-mayur-vpc"
            },
            "tags_all": {
              "Name": "mayur-recipe-finder-react-mayur-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.mayur_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034138043057:network-acl/acl-031e173809f721380",
            "default_network_acl_id": "acl-031e173809f721380",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-031e173809f721380",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "034138043057",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-02817f1027a720691",
              "subnet-0f2e70d47806adfac"
            ],
            "tags": {
              "Name": "mayur-vpc-mayur-recipe-finder-react-default"
            },
            "tags_all": {
              "Name": "mayur-vpc-mayur-recipe-finder-react-default"
            },
            "vpc_id": "vpc-042473058230720e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.mayur_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mayur_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034138043057:route-table/rtb-007cc0624d5898e39",
            "default_route_table_id": "rtb-007cc0624d5898e39",
            "id": "rtb-007cc0624d5898e39",
            "owner_id": "034138043057",
            "propagating_vgws": null,
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "mayur-vpc-mayur-recipe-finder-react-default"
            },
            "tags_all": {
              "Name": "mayur-vpc-mayur-recipe-finder-react-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-042473058230720e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.mayur_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mayur_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034138043057:security-group/sg-057a928f06d76a7c1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-057a928f06d76a7c1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "034138043057",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mayur-vpc-mayur-recipe-finder-react-default"
            },
            "tags_all": {
              "Name": "mayur-vpc-mayur-recipe-finder-react-default"
            },
            "vpc_id": "vpc-042473058230720e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.mayur_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mayur_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034138043057:internet-gateway/igw-0b6134be374adebe8",
            "id": "igw-0b6134be374adebe8",
            "owner_id": "034138043057",
            "region": "ap-south-1",
            "tags": {
              "Name": "mayur-vpc-mayur-recipe-finder-react"
            },
            "tags_all": {
              "Name": "mayur-vpc-mayur-recipe-finder-react"
            },
            "vpc_id": "vpc-042473058230720e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mayur_vpc.aws_vpc.this",
            "module.mayur_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mayur_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b6134be374adebe8",
            "id": "r-rtb-0452ab4be5cc74c701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0452ab4be5cc74c70",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.mayur_vpc.aws_internet_gateway.this",
            "module.mayur_vpc.aws_route_table.public",
            "module.mayur_vpc.aws_vpc.this",
            "module.mayur_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mayur_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034138043057:route-table/rtb-0452ab4be5cc74c70",
            "id": "rtb-0452ab4be5cc74c70",
            "owner_id": "034138043057",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "mayur-vpc-mayur-recipe-finder-react-public"
            },
            "tags_all": {
              "Name": "mayur-vpc-mayur-recipe-finder-react-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-042473058230720e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.mayur_vpc.aws_vpc.this",
            "module.mayur_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mayur_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8bd40aa6e968590",
            "region": "ap-south-1",
            "route_table_id": "rtb-0452ab4be5cc74c70",
            "subnet_id": "subnet-0f2e70d47806adfac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mayur_vpc.aws_route_table.public",
            "module.mayur_vpc.aws_subnet.public",
            "module.mayur_vpc.aws_vpc.this",
            "module.mayur_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7799b9b90cf5b48",
            "region": "ap-south-1",
            "route_table_id": "rtb-0452ab4be5cc74c70",
            "subnet_id": "subnet-02817f1027a720691"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mayur_vpc.aws_route_table.public",
            "module.mayur_vpc.aws_subnet.public",
            "module.mayur_vpc.aws_vpc.this",
            "module.mayur_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mayur_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034138043057:subnet/subnet-0f2e70d47806adfac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2e70d47806adfac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "034138043057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "mayur-vpc-mayur-recipe-finder-react-public-ap-south-1a"
            },
            "tags_all": {
              "Name": "mayur-vpc-mayur-recipe-finder-react-public-ap-south-1a"
            },
            "vpc_id": "vpc-042473058230720e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mayur_vpc.aws_vpc.this",
            "module.mayur_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034138043057:subnet/subnet-02817f1027a720691",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02817f1027a720691",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "034138043057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "mayur-vpc-mayur-recipe-finder-react-public-ap-south-1b"
            },
            "tags_all": {
              "Name": "mayur-vpc-mayur-recipe-finder-react-public-ap-south-1b"
            },
            "vpc_id": "vpc-042473058230720e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mayur_vpc.aws_vpc.this",
            "module.mayur_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mayur_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034138043057:vpc/vpc-042473058230720e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-031e173809f721380",
            "default_route_table_id": "rtb-007cc0624d5898e39",
            "default_security_group_id": "sg-057a928f06d76a7c1",
            "dhcp_options_id": "dopt-0135606e418c48cf5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-042473058230720e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-007cc0624d5898e39",
            "owner_id": "034138043057",
            "region": "ap-south-1",
            "tags": {
              "Name": "mayur-vpc-mayur-recipe-finder-react"
            },
            "tags_all": {
              "Name": "mayur-vpc-mayur-recipe-finder-react"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}